Added plan for contents slide

--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
           </ul>
         </section>
 
+<!--
+
+ More introduction
+
+ How do coroutines fit with C++20 concurrency?
+ Brief introduction to C++20 coroutines
+ Real-world example of coroutines
+   - Blu Wireless trains
+ Build an example application - Web Server with Boost.Beast
+   - show how to do some empirical evaluations
+   - hardware performance
+ C++23/C++26: the future of coroutines
+   std::generator
+
+-->
+
         <section>
           <h2><a href="https://github.com/jamespascoe/accu2022-example-code.git">Example Code: Tools & Build</a></h2>
             <ul>
