Polished introductory slides

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
           <p>
             <ol>
               <span class="fragment"><li>I am confident using coroutines</li></span>
-              <span class="fragment"><li>I understand coroutines significantly better than I did a year ago</li></span>
-              <span class="fragment"><li>I understand somewhat more about coroutines than I did a year ago</li></span>
+              <span class="fragment"><li>I understand coroutines better than a year ago</li></span>
+              <span class="fragment"><li>I understand a little more than a year ago</li></span>
               <span class="fragment"><li>I am still just starting to understand coroutines</li></span>
             </ol>
         </section>
         <section>
           <h2>Why this talk?</h2>
           <span class="fragment" style="color:yellow">Lots of good introductory talks ... </span>
-          <span class="fragment" style="color:yellow">but, what else do we need?</span>
+          <span class="fragment" style="color:yellow">but, what's next?</span>
           <p>
           <ul>
             <span class="fragment"><li>Advice: when and how to use coroutines</li></span>
@@ -66,22 +66,23 @@
         </section>
         <section>
           <h2>Outline</h2>
-          <span class="fragment" style="color:yellow">Concurrency in modern C++</span>
-          <span class="fragment" style="color:yellow">C++20 Coroutine Recap</span>
-          <span class="fragment" style="color:yellow">Mobile Wireless Networking with Coroutines</span>
-          <span class="fragment" style="color:yellow">Web Serving with Boost.Beast</span>
           <ul>
-            <span class="fragment"><li>Syncrhonous, Callbacks, Boost.Coroutine, Awaitables</li></span>
-            <span class="fragment"><li>Benchmarking with Apache bench (ab)</li></span>
-          </ul>
-          <span class="fragment" style="color:yellow">C++23/C++26: the future of coroutines</span>
-          <ul>
-            <span class="fragment"><li>P2502: std::generator</li></span>
-            <span class="fragment"><li>Benchmarking with Apache bench (ab)</li></span>
+            <span class="fragment"><li>Concurrency in Modern C++</li></span>
+            <ul>
+              <span class="fragment"><li>How C++20 Coroutines fit</span><span class="fragment"> (and work)</li></span>
+            </ul>
+            <span class="fragment"><li><a href="https://www.bluwireless.com/products/5g-tactical/">Mobile Wireless Networking</a> with Coroutines</li></span>
+            <span class="fragment"><li>Code Example: Web Serving with <a href="https://www.boost.org/doc/libs/1_81_0/libs/beast/doc/html/index.html">Boost.Beast</a></li></span>
+            <ul>
+              <span class="fragment"><li>Synchronous, Asynchronous</li></span>
+              <span class="fragment"><li><a href="https://www.boost.org/doc/libs/1_81_0/libs/coroutine2/doc/html/coroutine2/overview.html">Boost.Coroutine2</a>, <a href="https://www.boost.org/doc/libs/1_81_0/libs/beast/example/http/server/awaitable/http_server_awaitable.cpp">Awaitables</a></li></span>
+              <span class="fragment"><li>Empirical analysis with <a href="https://httpd.apache.org/docs/2.4/programs/ab.html">Apache bench</a> (ab)</li></span>
+            </ul>
+            <span class="fragment"><li><a href="http://wg21.link/p2502">P2502:</a> std::generator</li></span>
           </ul>
         </section>
         <section>
-          <h2><a href="https://github.com/jamespascoe/accu2022-example-code.git">Example Code: Tools & Build</a></h2>
+          <h2><a href="https://github.com/jamespascoe/accu2023-example-code.git">Example Code: Tools & Build</a></h2>
             <ul>
               <span class="fragment"><li>C++ examples all compile with <a href="https://gcc.gnu.org/gcc-12/changes.html">GCC 12.2</a>:</li></span>
               <span class="fragment"><ul><li><a href="https://www.boost.org/doc/libs/1_81_0/libs/beast/doc/html/index.html">Boost Beast 1.81.0</a></li></ul></span>
@@ -95,7 +96,7 @@
 
       <section>
         <section data-background-video="media/BWT_Intermission.mp4" data-background-video-loop=true>
-          <h1>Fundamentals</h1>
+          <h1>Concurrency</h1>
         </section>
 
       </section>
