--- a/index.html
+++ b/index.html
@@ -99,6 +99,73 @@
           <h1>Concurrency</h1>
         </section>
 
+
+        <!--
+          Concurrency vs. Parallelism
+
+          Concurrency
+            harnessing latency to do useful work elsewhere
+            can be pre-emptive (OS decides when to swicth) or Co-operative (programmer decides)
+            Coroutines fit here
+
+          Parallelism
+            doing multiple things at the same instant
+            often implies hardware support
+            multiple cores mean that you can run multiple threads
+            multiple issue pipelines in CPUs provide instruction level paralism
+
+        <--
+
+        <!--
+
+        <--
+
+          Concurrency recap. 
+
+
+
+
+
+          Needs to culminate in train example.
+
+
+        <!--
+
+          Import Coroutine Section from last year
+            Add new mermaid diagrams
+            Add mention to HALO optimisation wg21.link/p0981r0
+            Generally improve it
+
+        -->
+
+        <!--
+
+          Empirical study
+
+          How do we study Coroutines Empirically?
+
+          Coroutine example - Boost.beast
+            Synchronous, Asycnhronous, Boost.Coroutine2 and awaitables
+            apache bench
+
+          Give data
+
+            perf
+
+        -->
+
+        <!--
+
+          Section on 'the future'
+
+          P2502
+          libunifex
+          Std::exec
+          Conclusions
+          Questions
+
+        -->
+
       </section>
       <section>
 
@@ -111,6 +178,10 @@
           <a href="http://jamespascoe.github.io/accu2023">http://jamespascoe.github.io/accu2023</a><br>
           <a href="https://github.com/jamespascoe/accu2023-example-code.git"><font size="6">https://github.com/jamespascoe/accu2023-example-code.git</font></a>
         </section>
+
+<!--
+  Bristol and Bath Meetup
+-->
 
         </section>
       </div>
