--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <span class="fragment"><h3 style="color:yellow">Coroutines ...</span><span class="fragment"> What Else Do We Need?</h3></span>
           <p>
             <ol>
-              <span class="fragment"><li>More examples (real-world and learning)</li></span>
               <span class="fragment"><li>Fit within the wider concurrency framework</li></span>
+              <span class="fragment"><li>More examples (real-world and learning)</li></span>
               <span class="fragment"><li>Empirical measurements</li></span>
-              <span class="fragment"><li>The future: library support</li></span>
+              <span class="fragment"><li>Library support and the future</li></span>
             </ol>
             <aside class="notes">
             Coroutines still feel a bit ephemeral. Deeply technical, still quite difficult to know when
@@ -89,42 +89,130 @@
         </section>
 
       <section>
-        <section data-background-video="media/BWT_Intermission.mp4" data-background-video-loop=true>
-          <h1>Concurrency and Coroutines</h1>
+        <section data-menu-title="Concurrency Back-to-Basics" data-background-video="media/BWT_Intermission.mp4" data-background-video-loop=true>
+          <h1>Concurrency<br>Back-to-Basics</h1>
         </section>
 
+        <section>
+          <h2><a href=https://www.gnu.org/software/pth/pth-manual.html#threading_background">Concurrency vs. Parallelism</a></h2>
+            <ul>
+              <span class="fragment" style="color:yellow"><li>Concurrency exists when:</li></span>
+              <ul>
+                <span class="fragment"><li>multiple items of work are 'in progress'</li></span>
+                <span class="fragment"><li>e.g. processes, threads or coroutines</li></span>
+              </ul><br>
+              <span class="fragment" style="color:yellow"><li>Parallelism exists when:</li></span>
+              <ul>
+                <span class="fragment"><li>multiple items of work execute simultaneously</li></span>
+                <span class="fragment"><li>e.g. threads running on separate CPU cores</li></span>
+              </ul>
+            </ul>
+            <aside class="notes">
+            Concurrency exists when at least two threads are 'in progress' at the same time.
+            Parallelism arises when at least two threads are executing simultaneously.
 
-        <!--
-          Concurrency vs. Parallelism
+            I think it was Arthur O'Dwyer at CppCon 2020 who said that broadly speaking, parallelism in the context of Computer Science
+            generally requires some form of hardware. So, for example, my MAC is a quad core Intel i7 that's based on the Haswell
+            architecture. So this means it can run four threads, in parallel, at the same instant. If we go one level deeper we can
+            see that the Haswell microarchitecture is a dual-threaded, out-of-order microprocessor that is capable of decoding 5
+            instructions, issuing 4 fused uops (micro operations) and dispatching 8 uops on each cycle (and its clocked at 4GHz)..
+            </aside>
+            </aside>
+        </section>
 
-          Concurrency
-            harnessing latency to do useful work elsewhere
-            can be pre-emptive (OS decides when to swicth) or Co-operative (programmer decides)
-            Coroutines fit here
+        <!-- PICTURE -->
 
-          Parallelism
-            doing multiple things at the same instant
-            often implies hardware support
-            multiple cores mean that you can run multiple threads
-            multiple issue pipelines in CPUs provide instruction level paralism
+        <section>
+          <h2><a href="https://www.boost.org/doc/libs/1_81_0/libs/fiber/doc/html/fiber/overview.html">Taxonomy</a></h2>
+            <ol>
+              <span class="fragment"><li>Multiple processes run on a single computer</li></span>
+              <span class="fragment"><li>Multiple threads run within a single process</li></span>
+              <span class="fragment"><li>Multiple coroutines run within a single thread</li></span>
+            </ol>
+            <p>
+            <span class="fragment" style="color:yellow">Note: don't confuse coroutines with <a href="http://wg21.link/n4024">Fibers</a><br>
+            (see <a href="https://www.boost.org/doc/libs/1_81_0/libs/fiber/doc/html/fiber/overview.html">Boost.Fiber</a>) and <a href="https://en.wikipedia.org/wiki/Green_thread">Green Threads</a></span>
+            <aside class="notes">
+            A note of caution with the terms 'Coroutine', 'Fibers' and 'Green Threads'. They are sometimes used inter-changeably and
+            there are differences. My personal view is that fibers can be implemented using coroutines (this is exactly what Lua
+            does and Boost.Fiber is built on Boost.Coroutine), but they are not equivalent. For example, coroutines that are generators
+            are clearly not fibers. Coroutines provide enhanced control flow semantics, whereas, fibers give you a co-operatively scheduled
+            light-weight threading model (that resembles OS threads).
 
-        <--
+            Green Threads are threads that are scheduled by a runtime library or a virtual machine (so not an OS thread). The name actually
+            comes from the early days of Java - it was a co-operative threading model in Java 1.1, that was abandoned in 1.3 (back in the days
+            of the JDK 1.x for anyone that remembers it).
+            </aside>
+        </section>
 
-        <!--
+        <section>
+          <h2>Processes</h2>
+            <ul>
+              <span class="fragment"><li></li></span>
+            </ul>
+            <aside class="notes">
+            </aside>
+        </section>
 
-          Concurrency recap.
+        <!-- PICTURE -->
 
-          Needs to culminate in mobile mesh example.
+        <section>
+          <h2>Threads</h2>
+            <ul>
+              <span class="fragment"><li></li></span>
+            </ul>
+            <aside class="notes">
+            </aside>
+        </section>
 
-        -->
+        <!-- PICTURE -->
 
-        <!--
+        <section>
+          <h2>Coroutines (Fibers)</h2>
+            <ul>
+              <span class="fragment"><li></li></span>
+            </ul>
+            <aside class="notes">
+            </aside>
+        </section>
 
-            Add new mermaid diagrams
-            Add mention to HALO optimisation wg21.link/p0981r0
-            Generally improve it
+        <!-- PICTURE -->
 
-        -->
+<!--
+
+2. Processes
+
+The most obvious form of concurrency
+Heavy-weight (includes lots of state)
+Context switch is high cost
+Context switch occurs when either a blocking system call, or a pre-emptive time slice has expired
+Critical sections must be protected with locks, mutexs etc.
+
+Pre-emptive scheduler (OS) triggers a context switch either because a process is blocked (e.g. on a mutex), or because a time-slice has expired.
+
+diagram
+
+3. Threads
+
+Lighter weight - substantially less state
+Partitions a process so that useful work can be done in other parts when one part is blocked
+Give details of the thread scheduler
+
+Give C++ timeline
+
+diagram
+
+Reentrancy vs. thread safety
+
+4. Coroutines
+
+Allow 
+
+diagram (mermaid)
+
+Add mention to HALO optimisation wg21.link/p0981r0
+
+-->
 
       </section>
       <section>
