Added Concurrency/Parallelism diagrams

--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
             </aside>
         </section>
 
-        <!-- PICTURE -->
+        <section data-menu-title="Concurrency">
+          <img class="stretch" data-src="media/concurrency.png" style="background:none; border:none; box-shadow:none;">
+        </section>
+
+        <section data-menu-title="Parallelism">
+          <img class="stretch" data-src="media/parallelism.png" style="background:none; border:none; box-shadow:none;">
+        </section>
 
         <section>
           <h2><a href="https://www.boost.org/doc/libs/1_81_0/libs/fiber/doc/html/fiber/overview.html">Taxonomy</a></h2>
